# hexen

./: .gitignore  .pre-commit-config.yaml  ARRAY_FLATTENING_IMPLEMENTATION.md  ARRAY_IMPLEMENTATION_PLAN.md  ARRAY_TEST_FIX_PLAN.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  NODE_TYPE_ENUM_MIGRATION_PLAN.md  PARSER_IMPLEMENTATION_PLAN.md  PARSER_TEST_ANALYSIS_REPORT.md  README.md  SEMANTIC_SOURCE_TERMINOLOGY_UPDATE.md  SEMANTIC_TESTS_REFACTORING_PLAN.md  SEMANTIC_TEST_ANALYSIS_REPORT.md  SESSION_6_FINAL_STATUS.md  TERMINOLOGY_UPDATE_COMPLETE.md  TERMINOLOGY_UPDATE_PLAN.md  TYPE_SYSTEM_IMPLEMENTATION_PLAN.md  UNIFIED_BLOCK_SYSTEM_GAP_ANALYSIS.md  UNIFIED_BLOCK_SYSTEM_IMPLEMENTATION_PLAN.md  pyproject.toml  test_gaps.hxn  test_gaps_simple.hxn  test_parser_current.hxn  test_results.txt
docs/: ARCHITECTURE.md  ARRAY_IMPLEMENTATION_PLAN.md  ARRAY_IMPLEMENTATION_PLAN_PARSER.md  ARRAY_IMPLEMENTATION_PLAN_SEMANTIC.md  ARRAY_TYPE_SYSTEM.md  BINARY_OPERATIONS_IMPLEMENTATION_PLAN.md  BINARY_OPS.md  CODE_SIMPLIFICATION_ANALYSIS.md  COMPARISON_OPS.md  COMPTIME_ANALYZER_CENTRALIZATION.md  COMPTIME_ANALYZER_MODULAR_SPLIT.md  COMPTIME_ARRAY_FLATTENING_IN_FUNCTION_CALLS.md  COMPTIME_QUICK_REFERENCE.md  CONDITIONAL_IMPLEMENTATION_PLAN.md  CONDITIONAL_SYSTEM.md  EXPRESSION_BLOCK_EXPLICIT_TYPES_IMPLEMENTATION_PLAN.md  FLATTENING_REMOVAL_PLAN.md  FUNCTION_IMPLEMENTATION_PLAN.md  FUNCTION_SYSTEM.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  ISSUE1_COMPTIME_ARRAY_SIZE_VALIDATION.md  LABEL_PARSER_TESTS.md  LABEL_SYNTAX_DECISION.md  LABEL_SYNTAX_IMPLEMENTATION_SUMMARY.md  LOOP_SYSTEM.md  (+21 more)
(+228 files in other folders)
