[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexen"
version = "0.1.0"
description = "An experimental system programming language guided by principles rather than precedent"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "kiinaq", email = "kiinaq42@gmail.com"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.12"
dependencies = [
    "llvmlite>=0.44.0",
    "lark>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "pre-commit>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/kiinaq/hexen"
Repository = "https://github.com/kiinaq/hexen"
Issues = "https://github.com/kiinaq/hexen/issues"

[project.scripts]
hexen = "hexen.cli:main"

[tool.hatchling.build.targets.wheel]
packages = ["src/hexen"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space" 